feature: added optimized API versions
